--- a/in-linked/src/app/pages/enterprise-profile/fast-facts-section-modal/fast-facts-section-modal.component.html
+++ b/in-linked/src/app/pages/enterprise-profile/fast-facts-section-modal/fast-facts-section-modal.component.html
@@ -1,6 +1,6 @@
 <ng-template #content let-d="dismiss">
     <div class="modal-header">
-      <h4 class="modal-title" id="enterprise-fast-facts-section">Update your Company Fast Facts</h4>
+      <h4 class="modal-title" id="enterprise-fast-facts-section">Update your Enterprise Fast Facts</h4>
       <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
