--- a/in-linked/src/app/pages/enterprise-profile/title-section-modal/title-section-modal.component.html
+++ b/in-linked/src/app/pages/enterprise-profile/title-section-modal/title-section-modal.component.html
@@ -1,76 +1,54 @@
 <ng-template #content let-d="dismiss">
-    <div class="modal-header">
-      <h4 class="modal-title" id="candidate-title-section">Update your Profile</h4>
-      <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <form>
+  <div class="modal-header">
+    <h4 class="modal-title" id="enterprise-title-section">Update your Enterprise Profile</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form>
+      <div class="form-group">
+        <label for="enterprise-name">Enterprise Name</label>
+        <input name="enterprise-name" type="text" class="form-control" id="enterprise-name" placeholder="Enterprise Name"
+          [(ngModel)]="enterpriseName">
+      </div>
+      <div class="form-group">
+        <label for="enterprise-headline">Headline</label>
+        <textarea name="headline" class="form-control" id="enterprise-headline" rows="3" [(ngModel)]="headline"></textarea>
+      </div>
+      <div class="form-group">
+        <label for="enterprise-email">Email Address</label>
+        <input name="email" type="text" class="form-control" id="enterprise-email" placeholder="john.smith@email.com"
+          [(ngModel)]="email">
+      </div>
+      <label for="password-change">Change Your Password</label>
+      <div id="password-change">
+
         <div class="form-row">
+
           <div class="form-group col">
-            <label for="candidate-first-name">First Name</label>
-            <input name="first-name" type="text" class="form-control" id="candidate-first-name" placeholder="First Name" [(ngModel)]="firstName">
+            <!-- <label for="enterprise-old-pw">Current Password</label> -->
+            <input name="current-password" type="password" class="form-control" id="enterprise-old-pw" placeholder="Current Password"
+              [(ngModel)]="currPassword">
           </div>
           <div class="form-group col">
-            <label for="candidate-last-name">Last Name</label>
-            <input name="last-name" type="text" class="form-control" id="candidate-last-name" placeholder="Last Name" [(ngModel)]="lastName">
+            <!-- <label for="enterprise-new-pw">New Password</label> -->
+            <input name="new-password" type="password" class="form-control" id="enterprise-new-pw" placeholder="New Password"
+              [(ngModel)]="newPassword">
+          </div>
+          <div class="form-group col">
+            <!-- <label for="enterprise-confirm-pw">Confirm New Password</label> -->
+            <input name="confirm-password" type="password" class="form-control" id="enterprise-confirm-pw" placeholder="Confirm New Password"
+              [(ngModel)]="newConfirm">
           </div>
         </div>
-        <div class="form-group">
-          <label for="candidate-headline">Headline</label>
-          <textarea name="headline" class="form-control" id="candidate-headline" rows="3" [(ngModel)]="headline"></textarea>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-9">
-            <label for="candidate-email">Email Address</label>
-            <input name="email" type="text" class="form-control" id="candidate-email" placeholder="john.smith@email.com" [(ngModel)]="email">
-          </div>
-          <div class="form-group col-3 text-center">
-            <label for="candidate-display-email-radios">Display email?</label>
-            <div id="candidate-display-email-radios">
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="display-email" id="yes-email" value="yes-email"
-                  [(ngModel)]="displayEmail" checked>
-                <label class="form-check-label" for="yes-email">
-                  Yes
-                </label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="display-email" id="no-email" value="no-email"
-                  [(ngModel)]="displayEmail">
-                <label class="form-check-label" for="no-email">
-                  No
-                </label>
-              </div>
-            </div>
-          </div>
-        </div>
-        <label for="password-change">Change Your Password</label>
-        <div id="password-change">
-  
-          <div class="form-row">
-  
-            <div class="form-group col">
-              <!-- <label for="candidate-old-pw">Current Password</label> -->
-              <input name="current-password" type="password" class="form-control" id="candidate-old-pw" placeholder="Current Password" [(ngModel)]="currPassword">
-            </div>
-            <div class="form-group col">
-              <!-- <label for="candidate-new-pw">New Password</label> -->
-              <input name="new-password" type="password" class="form-control" id="candidate-new-pw" placeholder="New Password" [(ngModel)]="newPassword">
-            </div>
-            <div class="form-group col">
-              <!-- <label for="candidate-confirm-pw">Confirm New Password</label> -->
-              <input name="confirm-password" type="password" class="form-control" id="candidate-confirm-pw" placeholder="Confirm New Password" [(ngModel)]="newConfirm">
-            </div>
-          </div>
-        </div>
-      </form>
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-link" (click)="d('Save click')">Cancel</button>
-      <button type="button" class="btn btn-success" (click)="onSubmit();">Submit Changes</button>
-    </div>
-  </ng-template>
-  
-  <fa-icon class="edit" [icon]="['far', 'edit']" size="lg" (click)="open(content)"></fa-icon>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-link" (click)="d('Save click')">Cancel</button>
+    <button type="button" class="btn btn-success" (click)="onSubmit();">Submit Changes</button>
+  </div>
+</ng-template>
+
+<fa-icon class="edit" [icon]="['far', 'edit']" size="lg" (click)="open(content)"></fa-icon>
